--- a/_sass/_article.scss
+++ b/_sass/_article.scss
@@ -1,5 +1,5 @@
 .post {
-  background: white;
+  background: $brand-color;
   margin: 2em auto;
   max-width: 60rem;
   padding: 2em 0;
@@ -22,7 +22,7 @@
 
 .post p {
   text-align: justify;
-  text-indent: 1.5em;
+  text-indent: 0;
   text-justify: inter-word;
 }
 
