--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,10 +1,29 @@
+{%- if site.google_analytics -%}
 <script>
-if(!(window.doNotTrack === "1" || navigator.doNotTrack === "1" || navigator.doNotTrack === "yes" || navigator.msDoNotTrack === "1")) {
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  ga('create', '{{ site.google_analytics }}', 'auto');
-  ga('send', 'pageview');
-}
+  // Respect “Do Not Track”
+  if (
+    !(window.doNotTrack === "1"
+      || navigator.doNotTrack === "1"
+      || navigator.doNotTrack === "yes"
+      || navigator.msDoNotTrack === "1")
+  ) {
+    // Load gtag.js
+    var gaID = "{{ site.google_analytics }}";
+    var head = document.getElementsByTagName('head')[0];
+
+    var script1 = document.createElement('script');
+    script1.async = true;
+    script1.src = "https://www.googletagmanager.com/gtag/js?id=" + gaID;
+    head.appendChild(script1);
+
+    var script2 = document.createElement('script');
+    script2.innerHTML = "\
+      window.dataLayer = window.dataLayer || [];\
+      function gtag(){dataLayer.push(arguments);}\
+      gtag('js', new Date());\
+      gtag('config', '" + gaID + "');\
+    ";
+    head.appendChild(script2);
+  }
 </script>
+{%- endif -%}
