--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,11 +1,13 @@
-{%- if site.google_analytics -%}
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
+<!-- _includes/google-analytics.html -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-N1PXP4BYMH"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', '{{ site.google_analytics }}');
+  gtag('config', 'G-N1PXP4BYMH');
 </script>
-{%- endif -%}
+
+
+
 
