--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -2,12 +2,11 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-N1PXP4BYMH"></script>
 <script>
+  console.log("🔍 GA snippet starting");   // ← add this line
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+  function gtag(){ dataLayer.push(arguments); }
   gtag('js', new Date());
   gtag('config', 'G-N1PXP4BYMH');
 </script>
-
-
 
 
