Playing around with hom

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,6 +24,14 @@ layout: default
 
 <main class="home" id="main" role="main" aria-label="Content">
 
+   <section id="about">
+    <h2>About Me</h2>
+    <img src="/assets/images/headshot_2025_edited.jpeg" alt="Headshot" style="max-width:200px; height:auto;">
+    <p>
+      I am a PhD candidate in Economics at Boston University. Before my doctoral studies...
+    </p>
+  </section>
+
   <h1 class="content-title divided">
     {% if site.paginate and site.paginate_path and paginator.page > 1 %}
       Page {{ paginator.page }}
