Moving about me to home page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,6 +32,8 @@ layout: default
       I am an applied microeconomist working on topics in health and family economics. In my current research, I study determinants of fertility rates, maternal health, and policies targeting low-income families.     
       
       I am on the 2025-2026 job market.
+
+      You can contact me at [abidow@bu.edu](mailto:abidow@bu.edu).
     </p>
   </section>
 
