Updating home page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,24 +24,25 @@ layout: default
 
 <main class="home" id="main" role="main" aria-label="Content">
 
-   <section id="about">
+   <section id="about" style="text-align:center; max-width:600px; margin:0 auto;">
     <img src="/assets/images/headshot_2025_edited.jpeg" alt="Headshot" style="max-width:300px; height:auto;">
-    <p>
+    <p style="margin-top:1.5em;">
       I am a PhD candidate in Economics at Boston University. Before my doctoral studies, I obtained a B.A. in Economics & Management from the University of Oxford and an M.Sc in Economics from University College London. I also worked for the U.K. Government Economic Service on energy price modelling, digital markets, and family related policies. 
     <p> 
 
-    <p>  
+    <p style="margin-top:1.5em;"> 
       I am an applied microeconomist working on topics in health and family economics. In my current research, I study determinants of fertility rates, maternal health, and policies targeting low-income families.     
     <p>
       
-    <p>  
+    <p style="margin-top:1.5em;"> 
       I am on the 2025-2026 job market.
     <p>
 
-    <p>
-      You can contact me at [abidow@bu.edu](mailto:abidow@bu.edu).
+    <p style="margin-top:1.5em;">
+      You can contact me at <a href="mailto:abidow@bu.edu">abidow@bu.edu</a>.
     </p>
   </section>
+  
 
   <h1 class="content-title divided">
     {% if site.paginate and site.paginate_path and paginator.page > 1 %}
