--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,7 +31,7 @@ layout: default
     <p> 
 
     <p style="margin-top:1.5em;"> 
-      I am on the 2025-2026 job market.
+      In August 2026 I will be a postdoctoral fellow at the FAIR Institute at the Norwegian School of Economics (NHH). 
     <p>
 
     <p style="margin-top:1.5em;">
