--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,8 @@ layout: default
 <main class="home" id="main" role="main" aria-label="Content">
 
    <section id="about" style="text-align:center; max-width:600px; margin:0 auto;">
-    <img src="/assets/images/headshot_2025_edited.jpeg" alt="Headshot" style="max-width:300px; height:auto;">
+    <img src="/assets/images/headshot_2025_edited.jpeg" alt="Headshot" class="headshot">
+     
     <p style="margin-top:1.5em;">
       I am an applied microeconomist working on topics in health and labour economics. In my current research, I study childcare as a determinant of fertility choices, maternal health, and health inequalities. 
     <p> 
